# conors_secret_strat

./: README.md  actions.py  agent.py  conors_secret_strategy.py  constants.py  dollar_cost_averaging.db  helpers.py  imports.py  inflation.db  metrics.py  pyproject.toml  run.py  run_local.py  secret_notebook.ipynb
dojo_examples/: 20241026-19:59:18.db  inflation.db  testing_backtest.ipynb  testing_examples.ipynb
dojo_examples/agents/: uniswapV3_pool_wealth.py
drawer/logs/: anvil_port_12647.txt  anvil_port_20727.txt  anvil_port_26141.txt  anvil_port_27369.txt  anvil_port_27447.txt  anvil_port_37976.txt  anvil_port_42479.txt  anvil_port_43071.txt  anvil_port_47246.txt  anvil_port_49952.txt  anvil_port_52779.txt  anvil_port_57821.txt  (+4 more)
logs/: anvil_port_13899.txt  anvil_port_16343.txt  anvil_port_16347.txt  anvil_port_17284.txt  anvil_port_17285.txt  anvil_port_17286.txt  anvil_port_20045.txt  anvil_port_22654.txt  anvil_port_23441.txt  anvil_port_24417.txt  anvil_port_24789.txt  anvil_port_26140.txt  anvil_port_27124.txt  anvil_port_27963.txt  anvil_port_28292.txt  anvil_port_28646.txt  anvil_port_28807.txt  anvil_port_30065.txt  anvil_port_31512.txt  anvil_port_31559.txt  anvil_port_33576.txt  anvil_port_33880.txt  anvil_port_36523.txt  anvil_port_38316.txt  anvil_port_42254.txt  anvil_port_43193.txt  anvil_port_45898.txt  anvil_port_47849.txt  anvil_port_49462.txt  anvil_port_50453.txt  anvil_port_50610.txt  anvil_port_51295.txt  anvil_port_59347.txt  anvil_port_61307.txt  anvil_port_62580.txt  anvil_port_62945.txt
mathematica/: 01.nb
tests/: test__metrics.py
(+4 files in other folders)
